Fixed duplicated track issue.

--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
 			serverPath: 'http://myousica.com',
 			settingsXMLPath: '/multitrack.xml',
 			isLogEnabled: 'yes',
-			isServiceDumpEnabled: 'yes',
+			isServiceDumpEnabled: 'no',
 			songID: 3063,
 			loadSong: 'no'
 		};
