--- a/html/index.html
+++ b/html/index.html
@@ -24,11 +24,11 @@
 		}
 
 		var flashvars = {
-			serverPath: 'http://myousica.com',
+			serverPath: 'http://mewsic.stage.lime5.it',
 			settingsXMLPath: '/multitrack.xml',
 			isLogEnabled: 'yes',
 			isServiceDumpEnabled: 'no',
-			songID: 3447,
+			songID: 0,
 			loadSong: 'no'
 		};
 		var params = {};
